--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,15 @@ name: CI
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 21
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'oracle'
-      - name: gradle build
+          cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
         run: ./gradlew build
-      - name: Test
-        run: ./gradlew check
