feat: Выполнение второй практики
Реализована сущность человека
Протестиовано работа методов из Stream API

Tests: протестировано ci
Relates: #3

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,28 @@
 plugins {
-    id("java")
+    id 'java'
+    id "io.freefair.lombok" version "8.6"
 }
 
 group = "com.github.uwa9k073"
 version = "1.0-SNAPSHOT"
 
+java {
+    sourceCompatibility = '21'
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
+    google()
+}
+
+ext {
+    set('snippetsDir', file("build/generated-snippets"))
 }
 
 dependencies {
