--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,13 @@ name: CI
 jobs:
   build-praktiki-1-9:
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./praktiki_1-9
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
         uses: actions/setup-java@v3
+        working-directory: ${{env.working-directory}}
         with:
           java-version: '21'
           distribution: 'oracle'
