--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,17 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
         uses: actions/setup-java@v3
-        working-directory: ${{env.working-directory}}
         with:
           java-version: '21'
           distribution: 'oracle'
           cache: gradle
+          cache-dependecy-path: ${{env.working-directory}}/.gradle
       - name: Grant execute permission for gradlew
-        run: chmod +x ./praktiki_1-9/gradlew
+        working-directory: ${{env.working-directory}}
+        run: chmod +x ./gradlew
       - name: Build with Gradle
-        run: ./praktiki_1-9/gradlew build
+        working-directory: ${{env.working-directory}}
+        run: ./gradlew build
       - name: Run tests
-        run: ./praktiki_1-9/gradlew test --warning-mode=all
+        working-directory: ${{env.working-directory}}
+        run: ./gradlew test --warning-mode=all
