--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,11 @@ name: CI
 
 jobs:
   build-praktiki-1-9:
+    defaults:
+      run:
+        working-directory: praktiki_1-9
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./praktiki_1-9
+    
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
@@ -18,7 +20,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'oracle'
-          cache: ./praktiki_1-9/gradle
+          cache: gradle
       - name: Grant execute permission for gradlew
         working-directory: ${{env.working-directory}}
         run: chmod +x ./gradlew
