--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
       - name: Run tests
-        run: ./gradlew test --warning-mode=all
+        run: ./gradlew test --scan --warning-mode=all
