--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,8 @@ jobs:
         run: ./gradlew build
       - name: Run tests
         run: ./gradlew test --scan --warning-mode=all
+      - name: upload html test report
+        uses: actions/upload-artifact@v4.3.1
+        with: 
+            name: test
+            path: app/build/reports/tests/testDebugUnitTest/
