--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
       - name: Run tests
-        run: ./gradlew test --scan --warning-mode=all
+        run: ./gradlew test --warning-mode=all
       - name: upload html test report
         uses: actions/upload-artifact@v4.3.1
         with: 
