--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,11 @@ name: CI
       - develop
 
 jobs:
-  build-praktiki-1-9:
+  test_praktiki-1-9:
     defaults:
       run:
         working-directory: praktiki_1-9
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
@@ -23,8 +22,6 @@ jobs:
           cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
       - name: Run tests
         run: ./gradlew test --warning-mode=all
       - name: upload html test report
@@ -32,3 +29,23 @@ jobs:
         with: 
             name: test
             path: app/build/reports/tests/testDebugUnitTest/
+
+  build-praktiki-1-9:
+    defaults:
+      run:
+        working-directory: praktiki_1-9
+    runs-on: ubuntu-latest
+    needs: [test_praktiki-1-9]
+    steps:
+    - uses: actions/checkout@v3
+    - name: set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        java-version: '21'
+        distribution: 'oracle'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
