--- a/.github/workflows/praktiki-1-9-ci.yml
+++ b/.github/workflows/praktiki-1-9-ci.yml
@@ -7,11 +7,31 @@ name: CI
       - develop
 
 jobs:
-  test_praktiki-1-9:
+  build-praktiki-1-9:
     defaults:
       run:
         working-directory: praktiki_1-9
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        java-version: '21'
+        distribution: 'oracle'
+        cache: gradle
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
+  
+  test-praktiki-1-9:
+    defaults:
+      run:
+        working-directory: praktiki_1-9
+    runs-on: ubuntu-latest
+    needs: [build-praktiki-1-9]
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
@@ -29,23 +49,3 @@ jobs:
         with: 
             name: test
             path: app/build/reports/tests/testDebugUnitTest/
-
-  build-praktiki-1-9:
-    defaults:
-      run:
-        working-directory: praktiki_1-9
-    runs-on: ubuntu-latest
-    needs: [test_praktiki-1-9]
-    steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'oracle'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
