--- a/.github/workflows/praktiki-1-9-ci.yml
+++ b/.github/workflows/praktiki-1-9-ci.yml
@@ -7,10 +7,10 @@ name: CI
       - develop
 
 jobs:
-  build-praktiki-1-9:
+  build-praktiki-1-8:
     defaults:
       run:
-        working-directory: praktiki_1-9
+        working-directory: praktiki_1-8
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -24,14 +24,14 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew compileMain compileTest
   
-  test-praktiki-1-9:
+  test-praktiki-1-8:
     defaults:
       run:
-        working-directory: praktiki_1-9
+        working-directory: praktiki_1-8
     runs-on: ubuntu-latest
-    needs: [build-praktiki-1-9]
+    needs: [build-praktiki-1-8]
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
