--- a/.github/workflows/praktiki-1-9-ci.yml
+++ b/.github/workflows/praktiki-1-9-ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew compileMain compileTest
+      run: ./gradlew compileJava compileTestJava
   
   test-praktiki-1-8:
     defaults:
