--- a/praktiki_1-8/build.gradle
+++ b/praktiki_1-8/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'java'
     id "io.freefair.lombok" version "8.6"
-    // id 'checkstyle'
 }
 
 group = "com.github.uwa9k073"
 version = "1.0-SNAPSHOT"
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility(JavaVersion.VERSION_21)
+    targetCompatibility(JavaVersion.VERSION_21)
 }
 
 configurations {
@@ -31,20 +31,21 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
 
-tasks.test {
-    // skipForTask('build')
-    useJUnitPlatform()
+
+compileJava {
+    options.warnings = true
+    options.deprecation = true
+    options.compilerArgs += ["-Xlint:all"]
+    options.encoding = 'UTF-8'
 }
 
+compileTestJava {
+    options.warnings = true
+    options.deprecation = true
+    options.compilerArgs += ["-Xlint:all"]
+    options.encoding = 'UTF-8'
+}
 
-// configurations {
-//   checkstyleOverride
-// }
-
-// dependencies {
-//   checkstyleOverride('com.puppycrawl.tools:checkstyle:6.11.2')
-// }
-
-// tasks.withType(Checkstyle) {
-//   checkstyleClasspath = project.configurations.checkstyleOverride
-// }
+tasks.test {
+    useJUnitPlatform()
+}
