--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,7 @@ name: CI
       - develop
 
 jobs:
-  build-praktiki-1-8:
-    defaults:
-      run:
-        working-directory: praktiki_1-8
+  compile:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -26,12 +23,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew compileJava compileTestJava
   
-  test-praktiki-1-8:
-    defaults:
-      run:
-        working-directory: praktiki_1-8
+  tests:
     runs-on: ubuntu-latest
-    needs: [build-praktiki-1-8]
+    needs: [compile]
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
